syntax = "proto3";

option java_multiple_files = true;

package hcmus.zing_mp3;

message Song {
  int32 id = 1;
  string name = 2;
  string song_writer = 3;
  string lyric = 4;
  int32 duration = 5;
  int32 played = 6;
  int32 liked = 7;
  string provided_by = 8;
  string thumbnail = 9;
//  bytes images = 10;
}

message SongId {
  int32 id = 1;
}

message Status {
  string message = 1;
}

service SongService {
  rpc getSongById(Song) returns (Song) {}
  rpc getAllSongs(Song) returns (stream Song) {}
  rpc addSong(Song) returns (Song) {}
  rpc updateSong(Song) returns (Song) {}
  rpc deleteSong(Song) returns (Status) {}
}